--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@mui/material": "^5.10.5",
+    "@mui/material": "^5.10.9",
+    "@mui/x-data-grid": "^5.17.6",
     "apexcharts": "^3.35.5",
     "formik": "^2.2.9",
     "next": "12.2.5",
