--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/x-data-grid": "^5.17.6",
     "apexcharts": "^3.35.5",
     "formik": "^2.2.9",
+    "formik-mui": "^5.0.0-alpha.0",
+    "formik-mui-x-date-pickers": "^0.0.1",
     "next": "12.2.5",
     "next-i18next": "^12.0.1",
     "react": "18.2.0",
